footer in place, wip need to fix alignments next

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -255,7 +255,9 @@ th {
   width: 100%;
   background-color: $st_tropaz;
   padding: 20px 0 0 0;
-  height: 100px;
+  a {
+    color: $golden_tainoi;
+  }
 }
 
 
